// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Setting:  matches snapshot 1`] = `
<Container
  as="a"
  href="/"
>
  <Title>
    Lorem ipsum
  </Title>
  <Subtitle>
    dolor sit amet
  </Subtitle>
</Container>
`;

exports[`Setting:  matches snapshot without href 1`] = `
<Container
  as="div"
>
  <Title>
    Lorem ipsum
  </Title>
  <Subtitle>
    dolor sit amet
  </Subtitle>
</Container>
`;

exports[`Setting:  matches snapshot without subtitle 1`] = `
<Container
  as="a"
  href="/"
>
  <Title>
    Lorem ipsum
  </Title>
</Container>
`;

exports[`Setting:  matches snapshot without subtitle and href 1`] = `
<Container
  as="div"
>
  <Title>
    Lorem ipsum
  </Title>
</Container>
`;
